feat(iam): Implementa CRUD completo para gestión de usuarios y roles
Implementa la funcionalidad completa para la gestión de usuarios, roles y permisos (IAM), basada en el feature plan FP-IOC-004.

- Añade controladores, servicios, repositorios y DTOs para el CRUD de AppUser, Role y Permission.
- Incluye endpoints para la asignación y revocación de roles a usuarios.
- Implementa una capa de persistencia robusta con entidades JPA y repositorios de Spring Data.
- Añade validadores personalizados para unicidad de email y formato de UUID.
- Incorpora tests de unidad y de integración para la nueva funcionalidad.
- Corrige el fallo de arranque de Hibernate al especificar `columnDefinition="citext"` en la entidad AppUser, alineando el mapeo con el esquema de la base de datos.